Поменял фон на гиф изображение

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 </head>
 <body>
     <!-- GIF фон -->
-    <img class="gif-background" src="assets/tt.gif" alt="Animated background">
+    <img class="gif-background" src="assets/tt.gif?v=1" alt="Animated background">
     
     <div class="canvas-container">
         <canvas id="canvas"></canvas>
