--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
             <i class="fas fa-play" id="playIcon"></i>
         </div>
         <div class="music-info">
-            <span class="music-title">Lo-Fi beats</span>
+            <span class="music-title">пиздятий</span>
         </div>
     </div>
 
