--- a/index.html
+++ b/index.html
@@ -936,7 +936,7 @@
         <!-- Вставка видео-контейнера (строка 1543) -->
     <div class="video-container" id="videoContainer">
         <video id="pageVideo" loop playsinline muted>
-            <source src="assets/video.mp4" type="video/mp4">
+            <source src="./assets/video.mp4" type="video/mp4">
             Ваш браузер не поддерживает видео.
         </video>
         <div class="video-control" id="videoControl">
